fix: Add missing workflows translation key to all languages
- Fixed ReferenceError: t is not defined in Layout.js
- Changed hardcoded 'Lifecycle Workflows' to t('nav.workflows')
- Added 'workflows' translation key to all 9 language files:
  - English: Lifecycle Workflows
  - Spanish: Flujos de Trabajo del Ciclo de Vida
  - French: Flux de Travail du Cycle de Vie
  - German: Lebenszyklus-Workflows
  - Chinese: 生命周期工作流
  - Japanese: ライフサイクルワークフロー
  - Portuguese: Fluxos de Trabalho do Ciclo de Vida
  - Arabic: سير عمل دورة الحياة
  - Bulgarian: Работни Потоци на Жизнения Цикъл

This fixes the critical runtime error that prevented the application
from loading after the Lifecycle Workflows feature was deployed.

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -26,6 +26,7 @@
     "onboarding": "التعيين",
     "offboarding": "إنهاء الخدمة",
     "scheduledOffboarding": "إنهاء الخدمة المجدول",
+    "workflows": "سير عمل دورة الحياة",
     "deviceManagement": "إدارة الأجهزة",
     "faq": "الأسئلة الشائعة",
     "settings": "الإعدادات"
