--- a/src/locales/bg.json
+++ b/src/locales/bg.json
@@ -26,6 +26,7 @@
     "onboarding": "Въвеждане",
     "offboarding": "Освобождаване",
     "scheduledOffboarding": "Планирано Освобождаване",
+    "workflows": "Работни Потоци на Жизнения Цикъл",
     "deviceManagement": "Управление на Устройства",
     "faq": "Често Задавани Въпроси",
     "settings": "Настройки"
