--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -26,6 +26,7 @@
     "onboarding": "Einarbeitung",
     "offboarding": "Austritt",
     "scheduledOffboarding": "Geplante Austritte",
+    "workflows": "Lebenszyklus-Workflows",
     "deviceManagement": "Geräteverwaltung",
     "faq": "FAQ",
     "settings": "Einstellungen"
