--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,6 +34,7 @@
     "onboarding": "Onboarding",
     "offboarding": "Offboarding",
     "scheduledOffboarding": "Scheduled Offboarding",
+    "workflows": "Lifecycle Workflows",
     "deviceManagement": "Device Management",
     "faq": "FAQ",
     "settings": "Settings",
