--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -26,6 +26,7 @@
     "onboarding": "Alta de Empleados",
     "offboarding": "Baja de Empleados",
     "scheduledOffboarding": "Bajas Programadas",
+    "workflows": "Flujos de Trabajo del Ciclo de Vida",
     "deviceManagement": "Gestión de Dispositivos",
     "faq": "Preguntas Frecuentes",
     "settings": "Configuración"
