--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -26,6 +26,7 @@
     "onboarding": "オンボーディング",
     "offboarding": "オフボーディング",
     "scheduledOffboarding": "予定されたオフボーディング",
+    "workflows": "ライフサイクルワークフロー",
     "deviceManagement": "デバイス管理",
     "faq": "よくある質問",
     "settings": "設定"
