--- a/src/locales/pt.json
+++ b/src/locales/pt.json
@@ -26,6 +26,7 @@
     "onboarding": "Integração",
     "offboarding": "Desligamento",
     "scheduledOffboarding": "Desligamentos Agendados",
+    "workflows": "Fluxos de Trabalho do Ciclo de Vida",
     "deviceManagement": "Gerenciamento de Dispositivos",
     "faq": "Perguntas Frequentes",
     "settings": "Configurações"
