--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -26,6 +26,7 @@
     "onboarding": "入职",
     "offboarding": "离职",
     "scheduledOffboarding": "计划离职",
+    "workflows": "生命周期工作流",
     "deviceManagement": "设备管理",
     "faq": "常见问题",
     "settings": "设置"
