feat: Add Microsoft Purview compliance management with sensitivity labels and DLP alerts
- Created purviewService.js implementing Microsoft Graph API sensitivity labels
  * getSensitivityLabels() - List organization's sensitivity labels
  * getSensitivityLabel(id) - Get specific label details
  * getUserSensitivityLabels() - User-specific labels
  * getInformationProtectionPolicy() - Policy settings
  * getDLPAlerts() - Data loss prevention alerts
  * Based on official Microsoft Graph documentation
  * Endpoints: /security/informationProtection/sensitivityLabels
  * Full demo mode support with mock labels and DLP alerts

- Created PurviewManagement.js component (3-tab interface)
  * Sensitivity Labels tab: Grid view with color-coded labels, search, filtering
  * DLP Alerts tab: Alert list with severity/status filtering, time formatting
  * Policy Settings tab: Display mandatory labeling, downgrade justification
  * Modal detail view for label information
  * Heroicons-based UI matching existing app design
  * Real-time search and filters for labels and alerts

- Integrated into application
  * Added /compliance route in App.js with ProtectedRoute
  * Added Compliance Management nav item in Layout.js
  * Added ShieldCheckIcon for compliance section
  * Updated en.json and es.json translations
  * Permission: complianceManagement

- Features:
  * View sensitivity labels with color coding and protection status
  * Monitor DLP policy violations and alerts
  * Check information protection policy configuration
  * Support for parent/child label relationships
  * Sensitivity level indicators
  * Content format support display
  * Alert severity and status tracking

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -36,6 +36,7 @@
     "scheduledOffboarding": "Scheduled Offboarding",
     "workflows": "Lifecycle Workflows",
     "deviceManagement": "Device Management",
+    "complianceManagement": "Compliance Management",
     "faq": "FAQ",
     "settings": "Settings",
     "appTitle": "Employee Life Cycle Portal"
