--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -28,6 +28,7 @@
     "scheduledOffboarding": "Bajas Programadas",
     "workflows": "Flujos de Trabajo del Ciclo de Vida",
     "deviceManagement": "Gestión de Dispositivos",
+    "complianceManagement": "Gestión de Cumplimiento",
     "faq": "Preguntas Frecuentes",
     "settings": "Configuración"
   },
