feat: Add Microsoft Teams and Copilot administration features
- Created teamsService.js with comprehensive Teams Graph API operations:
  * Team management (list, create, archive, delete teams)
  * Member management (list, add, remove members and owners)
  * Channel operations (list, create, update, delete channels)
  * Settings management (team, member, guest, messaging, fun settings)
  * App management (list, install, uninstall apps)
  * Follows Microsoft's documented 4-step team creation pattern
  * Full demo mode support with realistic mock data

- Created copilotService.js with Copilot analytics and settings:
  * Usage analytics (active users, interactions, time saved, adoption rate)
  * User adoption metrics (department adoption, engagement levels, top users)
  * Activity reports (business outcomes, usage patterns, quality metrics)
  * Settings management (licensing info, features, governance)
  * Notes licensing requirements (Microsoft 365 Copilot license)
  * Identifies admin center exclusive features
  * Hybrid approach with Graph API attempts and fallback to mock data

- Created TeamsManagement.js component with 6-tab interface:
  * Teams tab: List teams, create/archive/delete, search, team cards
  * Members tab: View/manage members and owners, add/remove operations
  * Channels tab: List/create/update/delete channels (standard/private)
  * Apps tab: View installed apps, uninstall functionality
  * Settings tab: Display team settings (member, guest, messaging, fun)
  * Policies tab: Channel and team policies overview
  * Modal forms for team and channel creation
  * Confirmation dialogs for destructive actions

- Created CopilotManagement.js component with 4-tab analytics interface:
  * Usage Analytics tab: Stats cards, top features, usage trends charts
  * User Adoption tab: Adoption rates, engagement levels, department breakdown
  * Activity Reports tab: Business outcomes, peak hours, quality metrics
  * Settings tab: Licensing info, features, governance,

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,6 +37,8 @@
     "workflows": "Lifecycle Workflows",
     "deviceManagement": "Device Management",
     "complianceManagement": "Compliance Management",
+    "teamsManagement": "Teams Management",
+    "copilotManagement": "Copilot Management",
     "faq": "FAQ",
     "settings": "Settings",
     "appTitle": "Employee Life Cycle Portal"
